github-code-wrap.user.css
/* ==UserStyle==
@name         GitHub Code Wrap
@version      1.0.5
@description  Userstyle to wrap code long lines on GitHub
@namespace    StylishThemes
@author       StylishThemes
@homepageURL  https://github.com/StylishThemes/GitHub-code-wrap
@supportURL   https://github.com/StylishThemes/GitHub-code-wrap/issues
@updateURL    https://raw.githubusercontent.com/StylishThemes/GitHub-code-wrap/master/github-code-wrap.user.css
@license      CC-BY-SA-4.0
@preprocessor uso
==/UserStyle== */
@-moz-document domain("github.com"), domain("gist.github.com") {
  .blob-code-inner, .markdown-body pre > code, .markdown-body .highlight > pre {
    white-space: pre-wrap !important;
    word-break: break-all !important;
    overflow-wrap: break-word !important;
    display: block !important;
  }
  td.blob-code-inner {
    display: table-cell !important;
  }
}

